--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +15,6 @@
     "morgan": "~1.9.1",
     "node-persist": "^3.1.3",
     "nodemailer": "^6.9.6",
-    "nodemon": "^3.0.1"
+    
   }
 }
