--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mongoose": "^7.6.1",
     "morgan": "~1.9.1",
     "node-persist": "^3.1.3",
-    "nodemailer": "^6.9.6",
+    "nodemailer": "^6.9.6"
     
   }
 }
